# reading_plan

./: .gitignore  Makefile  README.md  docker-compose.yml
reading_plan/: Cargo.toml
reading_plan/migrations/: 20231118100828_initial.sql
reading_plan/shared/: Cargo.toml
reading_plan/shared/src/: config.rs  lib.rs
reading_plan/shared/src/adapters/: errors.rs  mod.rs
reading_plan/shared/src/adapters/factory/: service_factory.rs
reading_plan/shared/src/adapters/gateways/: mod.rs  parse_gateway.rs
reading_plan/shared/src/adapters/gateways/postgres/: bible_gateway.rs  mod.rs  translation_gateway.rs
reading_plan/shared/src/adapters/persistence/: postgres.rs
reading_plan/shared/src/adapters/schemas/: bible.rs  mod.rs  translation.rs
reading_plan/shared/src/app/: errors.rs  factory.rs  mod.rs
reading_plan/shared/src/app/gateways/: abstract_bible.rs  abstract_parsing.rs  abstract_translation.rs  mod.rs
reading_plan/shared/src/app/services/: bible_service.rs  mod.rs  parsing_service.rs  translation_service.rs
reading_plan/shared/src/app/usecases/: bible.rs  gateways.rs  mod.rs  parsing.rs  translation.rs
reading_plan/shared/src/domain/: errors.rs  exceptions.rs  mod.rs  value_objects.rs
reading_plan/shared/src/domain/entities/: bible.rs  lang.rs  mod.rs  translation.rs
reading_plan/telegram/: Cargo.toml
reading_plan/telegram/src/: main.rs
reading_plan/web/: Cargo.toml  askama.toml
reading_plan/web/src/: app_state.rs  axum_app.rs  errors.rs  main.rs
reading_plan/web/src/routing/: bible_router.rs  mod.rs  router.rs  translation_router.rs
reading_plan/web/src/routing/api/: bible_router.rs  router.rs  translation_router.rs
reading_plan/web/src/schemas/: bible.rs  mod.rs  user.rs
reading_plan/web/src/templates/: base.html  exerpt.html
scraping/: requirements.txt
scraping/scraping/: database.py  gateways.py  items.py  pipelines.py  settings.py
scraping/scraping/spiders/: bibleonline.py
