[workspace]
resolver = "2"

members = [
    "shared",
    "web",
    "telegram"
]

[workspace.dependencies]  
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres" ] }
chrono = "0.4.31"
async-trait = "0.1.74"

[workspace.dev-dependencies]
sqlx-cli = { version = "0.7.2", features = ["native-tls", "postgres"] }