[workspace]
resolver = "2"

members = [
    "shared",
    "web",
    "telegram"
]

[workspace.dependencies]  
log = "0.4.20"
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "chrono" ] }
chrono = { version = "0.4.31", features = [ "serde" ] }
async-trait = "0.1.74"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dev-dependencies]
sqlx-cli = { version = "0.7.2", features = ["native-tls", "postgres"] }