[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
async-trait.workspace = true
sqlx.workspace = true
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
