[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
async-trait.workspace = true
teloxide = "0.12.2"
url = "2.4.1"
