[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

http = "1.0.0"
axum = { version = "0.6.20", features = ["macros"] }
askama = "0.12.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }

